methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:14: error: '(' expected but identifier found.
        if vuBiscuit(){
           ^MethodsReturning:17: error: illegal start of simple expression
      }
      ^